# vpp-plugin-rs

./: CHANGELOG.md  Cargo.toml  README.md  clippy.toml
.github/workflows/: ci.yml
tests/: coverage  run  test_it.py
vpp-example-plugin/: Cargo.toml
vpp-example-plugin/src/: lib.rs
vpp-plugin/: CHANGELOG.md  Cargo.toml  build.rs  vlib_wrapper.c  vlib_wrapper.h
vpp-plugin-api-gen/: CHANGELOG.md  Cargo.toml
vpp-plugin-api-gen/src/: lib.rs  parser.rs
vpp-plugin-macros/: CHANGELOG.md  Cargo.toml
vpp-plugin-macros/src/: lib.rs
vpp-plugin/benches/: tw_timer.rs
vpp-plugin/src/: bindings.rs  lib.rs
vpp-plugin/src/bindings/: x86_64-unknown-linux-gnu.rs
vpp-plugin/src/vlib/: buffer.rs  cli.rs  counter.rs  main.rs  mod.rs  node.rs  node_generic.rs
vpp-plugin/src/vlib/main/: mod.rs  sync.rs
vpp-plugin/src/vlib/process_node/: core.rs  mod.rs  mpsc.rs  tw_timer.rs
vpp-plugin/src/vlibapi/: mod.rs  num_unaligned.rs
vpp-plugin/src/vnet/: buffer.rs  error.rs  feature.rs  types.rs
vpp-plugin/src/vppinfra/: cache.rs  error.rs  mod.rs  tw_timer.rs  unformat.rs  vec.rs
vpp-test-plugin/: Cargo.toml  build.rs  test.api  test_types.api
vpp-test-plugin/src/: lib.rs
