[package]
name = "vpp-test-plugin"
version = "0.2.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.5.0"
vpp-plugin = { path = "../vpp-plugin", features = ["process-node"] }

[build-dependencies]
vpp-plugin-api-gen = { path = "../vpp-plugin-api-gen" }
